tests/lean/error_pos.lean.expected.out
error_pos.lean:1:39: error: type expected at
  B
error_pos.lean:4:43: error: type expected at
  B
error_pos.lean:9:39: error: type expected at
  B
error_pos.lean:11:35: error: type expected at
  B
error_pos.lean:13:42: error: type expected at
  B
error_pos.lean:15:105: error: invalid let-expression, expression
  a₁
has type
  B
but is expected to have type
  A
